# txt2pid

./: README.md  pyproject.toml
tests/: test_matches.py
txt2pid/: __init__.py  __main__.py
