[tool.poetry]
name = "txt2pid"
version = "0.1.0"
description = "Extract identifiers from text."
authors = ["datadave <605409+datadavev@users.noreply.github.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
